--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <br><br><br><br><br>
 <img class="round" src = "0.jfif" alt = "Personal_Pic" width = "200" height = "200" align = "middle">
 <h1> Abdulaziz Khan </h1>
-<h2> <img src ="logo.jpg" alt = "logo" height = "35" align = "middle"> "University of Windsor '22</h2>
+<h2> <img src ="logo.jpg" alt = "logo" height = "35" align = "middle"> University of Windsor '22</h2>
 <h3> Computer Science Student • Software Engineer </h3>
 <div style="width: 40%">
 <hr></hr>
