--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
 <title>Abdulaziz Khan</title>
-</head>
-
-<center>
-<body>
 <style>
+.bod{
+	font-family: "Courier New", Courier, monospace;
+}
+
 .round{
 	border-radius: 50%;
 }
@@ -14,17 +14,22 @@
 	padding-right: 20px;
 }
 </style>
+</head>
+
+<center>
+<body class="bod">
+
 <br><br><br><br><br>
-<img class="round" src = "0.jfif" alt = "Personal_Pic" width = "200" height = "200" align = "middle">
+<img class="round" src = "0.jfif" alt = "Personal_Pic" height = "275" align = "middle">
 <h1> Abdulaziz Khan </h1>
 <h2> <img src ="logo.jpg" alt = "logo" height = "35" align = "middle"> University of Windsor '22</h2>
 <h3> Computer Science Student • Software Engineer </h3>
 <div style="width: 40%">
 <hr></hr>
 </div>
-<a href = google.com><img class="padded"src ="Resume.jpg" alt = "logo" height = "58" align = "middle"></a>
-<img class="padded"src ="LinkedIn.png" alt = "logo" height = "85" align = "middle">
-<img class="padded"src ="github.png" alt = "logo" height = "75" align = "middle">
+<a href = https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3Aa555a557-c3d2-4846-8783-4653996801a0><img class="padded"src ="Resume.jpg" alt = "logo" height = "58" align = "middle"></a>
+<a href = https://www.linkedin.com/in/abdulaziz-khan/><img class="padded"src ="LinkedIn.png" alt = "logo" height = "85" align = "middle"></a>
+<a href = https://github.com/abdulazizkhan75><img class="padded"src ="github.png" alt = "logo" height = "75" align = "middle"></a>
 </body>
 </center>
 
