--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>Abdulaziz Khan</title>
+<link rel = "icon" href = "favicon.png"> 
 <style>
 .bod{
 	font-family: "Courier New", Courier, monospace;
