--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <img class="round" src = "0.jfif" alt = "Personal_Pic" height = "275" align = "middle">
 <h1> Abdulaziz Khan </h1>
 <h2> <img src ="logo.jpg" alt = "logo" height = "35" align = "middle"> University of Windsor '22</h2>
-<h3> Computer Science Student • Software Engineer </h3>
+<h3> Computer Science Student • Applied Computing </h3>
 <div style="width: 40%">
 <hr></hr>
 </div>
