--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div style="width: 40%">
 <hr></hr>
 </div>
-<a href = https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3Aa555a557-c3d2-4846-8783-4653996801a0><img class="padded"src ="Resume.jpg" alt = "logo" height = "58" align = "middle"></a>
+<a href = https://drive.google.com/open?id=1NRcJdeVtVqQuBZ7ao_1EtUjbySi-Gt_4><img class="padded"src ="Resume.jpg" alt = "logo" height = "58" align = "middle"></a>
 <a href = https://www.linkedin.com/in/abdulaziz-khan/><img class="padded"src ="LinkedIn.png" alt = "logo" height = "85" align = "middle"></a>
 <a href = https://github.com/abdulazizkhan75><img class="padded"src ="github.png" alt = "logo" height = "75" align = "middle"></a>
 </body>
