--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <img class="round" src = "0.jfif" alt = "Personal_Pic" height = "275" align = "middle">
 <h1> Abdulaziz Khan </h1>
 <h2> <img src ="logo.jpg" alt = "logo" height = "35" align = "middle"> University of Windsor '22</h2>
-<h3> Computer Science Student • Applied Computing </h3>
+<h3> Computer Science Student • Software Engineer </h3>
 <div style="width: 40%">
 <hr></hr>
 </div>
-<a href = https://drive.google.com/open?id=1NRcJdeVtVqQuBZ7ao_1EtUjbySi-Gt_4><img class="padded"src ="Resume.jpg" alt = "logo" height = "58" align = "middle"></a>
-<a href = https://www.linkedin.com/in/abdulaziz-khan/><img class="padded"src ="LinkedIn.png" alt = "logo" height = "85" align = "middle"></a>
-<a href = https://github.com/abdulazizkhan75><img class="padded"src ="github.png" alt = "logo" height = "75" align = "middle"></a>
+<a href = https://drive.google.com/open?id=1NRcJdeVtVqQuBZ7ao_1EtUjbySi-Gt_4 target = "_blank"><img class="padded"src ="Resume.jpg" alt = "logo" height = "58" align = "middle"></a>
+<a href = https://www.linkedin.com/in/abdulaziz-khan/ target = "_blank"><img class="padded"src ="LinkedIn.png" alt = "logo" height = "85" align = "middle"></a>
+<a href = https://github.com/abdulazizkhan75 target = "_blank"><img class="padded"src ="github.png" alt = "logo" height = "75" align = "middle"></a>
 </body>
 </center>
 
