--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <h1> Abdulaziz Khan </h1>
 <h2> <img src ="logo.jpg" alt = "logo" height = "35" align = "middle"> University of Windsor '22</h2>
 <h3> Computer Science Student • Software Engineer </h3>
+<h4> <img src ="logo1.png" alt = "logo" height = "35" align = "middle"> Research Analyst • Treasury Board Secretariat • May 2020 - Sept 2020</h4>
 <div style="width: 40%">
 <hr></hr>
 </div>
