--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>Welcome!</title>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -182,7 +182,7 @@
             <div class="footer__social">
                 <a href=""https://www.linkedin.com/in/abdulaziz-khan/"" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
                 <a href=""https://drive.google.com/file/d/1BreTh_mDWR9bWml_7ug-XnwYwgaa2jb2/view?usp=sharing"" class="footer__icon"><i class='bx bx-briefcase-alt'></i></a>
-                <a href="https://github.com/abdulazizkhan75" class="footer__icon"><i class='bx bxl-github'></i></a>
+                <a href=""https://github.com/abdulazizkhan75"" class="footer__icon"><i class='bx bxl-github'></i></a>
             </div>
             <p>&#169; 2020 copyright all right reserved</p>
         </footer>
