--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                     
                     <div>
-                        <h2 class="about__subtitle">I'am Abdulaziz</h2>
+                        <h2 class="about__subtitle">I am Abdulaziz</h2>
                         <p class="about__text">A little bit about myself I am currently a 3rd year student at the University of Windsor completing a bachelors of computer science. I enjoy playing Basketball and watching Hockey/Basketball!</p>           
                     </div>                                   
                 </div>
