--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					
 					<p><br>May 2020 - August 2020</br></p>
                     <div class="work__img">
-                        <img src="assets/img/devil.png" aligh="right">
+                        <img src="assets/img/devil.png" aligh="right"><br></br>
                     </div>
 					<br>One of the projects that I created was a simple game that I called eliminate the devil. In which the objective was to trap all the bad guys using boxes to win. To create this game I used Python and Pygame.<br>
 					<p><br>Sept 2018 - Sept 2018</br></p>
@@ -182,7 +182,7 @@
             <div class="footer__social">
                 
             </div>
-            <p>&#169; 2020 copyright all right reserved</p>
+            <p></p>
         </footer>
 
 
