--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I am Abdulaziz</h2>
-                        <p class="about__text">A little bit about myself I am currently a 3rd year student at the University of Windsor completing a bachelors of computer science. I recently completed an internship as a Data Science Intern at the Ontario Treasury Board Secretariat. I enjoy playing Basketball and watching Hockey/Basketball!</p>           
+                        <p class="about__text">A little bit about myself I am currently a 3rd year student at the University of Toronto St.George Campus completing a bachelors of computer science. I recently completed an internship as a Data Science Intern at the Ontario Treasury Board Secretariat. I enjoy playing Basketball and watching Hockey/Basketball!</p>           
                     </div>                                   
                 </div>
             </section>
