--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="work__img">
                         <img src="assets/img/devil.png" aligh="right"><br></br>
                     </div>
-					<br>One of the projects that I created was a simple game that I called eliminate the devil. In which the objective was to trap all the bad guys using boxes to win. To create this game I used Python and Pygame.<br>
+					<br>One of the projects that I created was a simple game in which you jump onto various platforms to reach the end without falling off the platform or touching any of the red boxes. To create this game I used Unity and C#.<br>
 					<p><br>Sept 2018 - Sept 2018</br></p>
                   
                 </div>
