--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bx-code skills__icon' ></i>
-                                <span class="skills__name">C/C++</span>
+                                <span class="skills__name">C/C++/C#</span>
                             </div>
                             <div class="skills__bar skills__js">
                                 
