--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					
 					<p><br>May 2020 - August 2020</br></p>
                     <div class="work__img">
-                        <img src="assets/img/D&D.jpeg" aligh="right"><br></br>
+                        <img src="assets/img/D&D.jpg" aligh="right"><br></br>
                     </div>
 					<br>One of the projects that I created was a simple character sheet manager for Dungeons and Dragons players that would allow them to manage their character sheets in one place in a quick effective manner. Which would allow them to enjoy the game more and not worry about Character tracking!<br>
 					<p><br>Sept 2020 - Dec 2020</br></p>
