--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Introduction</h2>
-                        <p class="about__text">A little bit about myself I am currently a 3rd year student at the University of Windsor completing a bachelors of computer science. I recently completed a summer internship at the Ontario Treasury Board Secretariat </p>           
+                        <p class="about__text">Upcoming Computer Science Graduate offering a strong foundation in software engineering and programming principles across multiple platforms. Experienced in various technologies such as Java, Python, C, JavaScript, Docker, Kubernetes, etc. Looking for an entry level software developer role that allows me to work on exciting projects and apply my skills.</p>           
                     </div>                                   
                 </div>
             </section>
