--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                 <div class="work__container bd-grid">
 				<div class="work__img">
-                        <img src="assets/img/btc.png" align="left"/>
+                        <img src="assets/img/btc.jpeg" align="left"/>
 						
                     </div>
 					<br><br>Developed a React app that allows individual to view and track the price of Crypto coins that they are interested in and it also showcases the entire market value of the crypto market</br></br>
