--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 					<div class="work__img">
                         <img src="assets/img/TLG.jfif" algn="center">
                     </div>
-					<br>Currently as a Backedn Software Engineer at The Lease Genius, my role is to work on the backend of various products and so far I have implemented real time messaging application for users to communicate with landlords utilizing Node.JS,Express.JS and React.JS</br>
+					<br>Currently working as a Software Engineer at The Lease Genius, my role is to work on the backend of various products and so far I have implemented real time messaging application for users to communicate with landlords utilizing Node.JS,Express.JS and React.JS</br>
 					
-					<p><br>May 2021 - Present</br></p>
+					<p><br>May 2021 - Sept 2021</br></p>
 					
                     <div class="work__img">
                         <img src="assets/img/TBS1.jpg" align="left"/>
