--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Abdulaziz Khan</span><br> A 4th Year Computer Science Student</h1>
+                    <h1 class="home__title">Hi,<br>I am <span class="home__title-color">Abdulaziz Khan</span><br> A Software Engineer!</h1>
 
                 </div>
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/abdulaziz-khan/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href= "https://drive.google.com/file/d/1Gnm2Ace50Qdcsg7s6eu0IgBO1zNJ07W-/view?usp=sharing" class="home__social-icon"><i class='bx bx-briefcase-alt' ></i></a>
+                    <a href= "https://drive.google.com/file/d/1y86_XSwoWLs4Zd42jQ4PfeOABmBJESE4/view?usp=sharing" class="home__social-icon"><i class='bx bx-briefcase-alt' ></i></a>
                     <a href="https://github.com/abdulazizkhan75" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
@@ -65,7 +65,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Introduction</h2>
-                        <p class="about__text">Upcoming Computer Science Graduate offering a strong foundation in software engineering and programming principles across multiple platforms. Experienced in various technologies such as Java, Python, C, JavaScript, Docker, etc. Looking for an entry level software developer role that allows me to work on exciting projects and apply my skills. </p>           
+                        <p class="about__text">Computer Science Graduate offering a strong foundation in software engineering and programming principles across multiple platforms. Experienced in various technologies such as Java, Python, C, JavaScript, Docker, etc.  </p>           
                     </div>                                   
                 </div>
             </section>
